--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 videos/mov_main.mp4.psd filter=lfs diff=lfs merge=lfs -text
 .mp4 filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
